# guitar-amp

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  devbox.json
.githooks/: pre-commit
src/: config.rs  main.rs
